<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                   http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.epam.dlab</groupId>
    <artifactId>dlab</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>services/common</module>
        <module>services/self-service</module>
        <module>services/security-service</module>
        <module>services/provisioning-service</module>
        <module>services/security-service/auth-ldap</module>
    </modules>

    <properties>
        <io.dropwizard.version>1.0.2</io.dropwizard.version>
        <com.google.inject.version>4.1.0</com.google.inject.version>
        <org.mongodb.version>3.3.0</org.mongodb.version>
        <junit.version>4.12</junit.version>
        <org.mockito.version>1.10.19</org.mockito.version>

        <java.version>1.8</java.version>
        <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
        <maven-shade-plugin.version>2.4.3</maven-shade-plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.dropwizard</groupId>
            <artifactId>dropwizard-core</artifactId>
            <version>${io.dropwizard.version}</version>
        </dependency>
        <dependency>
            <groupId>io.dropwizard</groupId>
            <artifactId>dropwizard-auth</artifactId>
            <version>${io.dropwizard.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>${com.google.inject.version}</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>